# Projet2A_Ub-EJR-Eats

./: .env.sample  Architecture diagram.md  Liste des fonctionalités.txt  Menus.drawio  README.md  README.students.md  __main__.py  init_project.sh  pyproject.toml  requirements.txt
data/: FillTestDatabase.py  init_db.sql  init_test_db.sql  pop_db.sql  pop_db_test.sql
doc/Suivi/: 2025.09.04-semaine1.md  2025.09.10 semaine2.md  2025.09.18 semaine3.md  2025.09.25-semaine4.md  2025.10.02-semaine5.md  2025.10.09-semaine6.md  2025.10.16-semaine7.md  2025.10.23-semaine8.md  2025.10.30-semaine9.md  2025.11.06-semaine10.md  2025.11.13-semaine11.md  2025.11.20-semaine12.md
src/App/: API.py  AdministratorController.py  Auth_utils.py  CustomerController.py  DeliveryDriverController.py  DriverController.py  JWTBearer.py  MovieController.py  UserController.py  init_app.py
src/DAO/: AdministratorDAO.py  CustomerDAO.py  DBConnector.py  DeliveryDAO.py  DeliveryDriverDAO.py  ItemDAO.py  OrderDAO.py  UserDAO.py  UserRepo.py
src/Model/: APIUser.py  Administrator.py  Customer.py  Delivery.py  DeliveryDriver.py  Individual.py  Item.py  JWTResponse.py  Order.py  User.py
src/Service/: AdministratorService.py  CustomerService.py  DeliveryDriverService.py  DeliveryService.py  GoogleMapService.py  IndividualService.py  ItemService.py  JWTService.py  PasswordService.py  UserService.py
src/Utils/: FillTestDatabase.py  log_decorator.py  log_init.py  reset_db.py
tests/DAO/: test_AdministratorDAO.py  test_CustomerDAO.py  test_DBConnector.py  test_DeliveryDAO.py  test_DeliveryDriverDAO.py  (+4 more)
(+9 files in other folders)
